Adding about module and fixing portofolio list and detail
