# internal/controllers/portofolio.go
@@ -2,7 +2,6 @@ package controllers
 
 import (
 	"context"
-	"portfolio-api/configs"
 	"portfolio-api/internal/models"
 	"time"
 
@@ -24,27 +23,29 @@ func NewPortofolioControllers(conn *pgxpool.Pool, timeout time.Duration) *Portof
 }
 
 func (dc *PortofolioControllers) List(c *fiber.Ctx) (responses []models.PortofolioList, err error) {
-	var capsule []models.PortofolioList
 	query_list := "SELECT DISTINCT on (portfolio.id) portfolio.id, portfolio.title, portfolio.description, portfolio_images.images FROM portfolio INNER JOIN portfolio_images ON portfolio.id = portfolio_images.id_portfolio order by portfolio.id, portfolio_images.id ASC"
 	var rows pgx.Rows
 	rows, err = dc.dbConn.Query(context.Background(), query_list)
+
 	if err != nil {
 		return
 	}
+
 	defer rows.Close()
 
 	for rows.Next() {
 		var model = new(models.PortofolioList)
-		err = rows.Scan(&model.ID, &model.Title, &model.Description, &model.Images)
+		err = rows.Scan(
+			&model.ID,
+			&model.Title,
+			&model.Description,
+			&model.Images,
+		)
 
 		if err != nil {
-			err = configs.RequestError{
-				Code:    500,
-				Message: "Gagal mengambil data Portofolio.",
-			}
 			return
 		}
-		capsule = append(capsule, *model)
+		responses = append(responses, *model)
 	}
 
 	if rows.Err() != nil {
@@ -55,30 +56,38 @@ func (dc *PortofolioControllers) List(c *fiber.Ctx) (responses []models.Portofol
 }
 
 func (dc *PortofolioControllers) Detail(c *fiber.Ctx, id int) (responses []models.PortofolioDetail, err error) {
-	var capsule []models.PortofolioDetail
-	query_list := "SELECT portfolio.id, portfolio.title, portfolio.description, portfolio_images.images FROM portfolio INNER JOIN portfolio_images ON portfolio.id = portfolio_images.id_portfolio WHERE portfolio.id = $1"
-	rows, err := dc.dbConn.Query(context.Background(), query_list, id)
-	if err != nil {
-		err = configs.RequestError{
-			Code:    500,
-			Message: err.Error(),
+	var model = new(models.PortofolioDetail)
+	var childs []map[string]interface{}
+	query_list := "SELECT portfolio.id, portfolio.title, portfolio.description, portfolio.project_info, portfolio.languages, portfolio.database, portfolio.date, portfolio.platform, portfolio.url, portfolio.source_code, portfolio.created_at, portfolio.updated_at, (SELECT json_agg(t) FROM (SELECT portfolio_images.orders, portfolio_images.images FROM portfolio_images WHERE portfolio_images.id_portfolio=portfolio.id) t) AS childs FROM portfolio WHERE id = $1;"
+	row := dc.dbConn.QueryRow(context.Background(), query_list, id)
+	err = row.Scan(
+		&model.ID,
+		&model.Title,
+		&model.Description,
+		&model.Database,
+		&model.Dates,
+		&model.Languages,
+		&model.Platform,
+		&model.ProjectInfo,
+		&model.SourceCode,
+		&model.Url,
+		&model.CreatedAt,
+		&model.UpdatedAt,
+		&childs,
+	)
+
+	for _, v := range childs {
+		sd := models.PortofolioImagesModel{
+			Orders: int64(v["orders"].(float64)),
+			Images: v["images"].(string),
 		}
-		return
+		model.Images = append(model.Images, sd)
 	}
-	defer rows.Close()
 
-	for rows.Next() {
-		var model = new(models.PortofolioDetail)
-		err = rows.Scan(&model.ID, &model.Title, &model.Description, &model.Images)
+	responses = append(responses, *model)
 
-		if err != nil {
-			err = configs.RequestError{
-				Code:    500,
-				Message: "Gagal mengambil data Portofolio.",
-			}
-			return
-		}
-		capsule = append(capsule, *model)
+	if err != nil {
+		return
 	}
 
 	return
