# internal/handlers/portofolio.go
@@ -3,6 +3,7 @@ package http
 import (
 	"portfolio-api/configs"
 	controllers "portfolio-api/internal/controllers"
+	"strconv"
 
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
@@ -21,7 +22,7 @@ func NewPortofolioHandler(rApi fiber.Router, validator *validator.Validate, cont
 
 	r := rApi.Group("/portofolio")
 	r.Get("/index", handler.List)
-	r.Get("/detail", handler.Detail)
+	r.Get("/detail/:id", handler.Detail)
 }
 
 // List func to get list of all portofolio
@@ -50,11 +51,30 @@ func (ka *PortofolioHandler) List(c *fiber.Ctx) error {
 	return c.JSON(r)
 }
 
+// Detail func to get detail of portofolio
+// @Summary      Endpoint for Portoflio Pages (http://yoviealfaguistuta.site)
+// @Description  Showing list of all portofolio data.
+// @ID           portofolio-detail
+// @Tags         Portofolio
+// @Param        id  path  number  true  "Id Portofolio"
+// @Produce      json
+// @success      200  {array}   models.PortofolioDetail  "Success"
+// @Failure      400  {object}  configs.RequestError        "Bad request"
+// @Failure      404  {object}  configs.RequestError        "Data not found"
+// @Failure      422  {array}   configs.DataValidationError "Data validation failed"
+// @Failure      500  {object}  configs.ServerError         "Server error"
+// @Security     ApiKeyAuth
+// @Router       /portofolio/detail/{id} [get]
 func (ka *PortofolioHandler) Detail(c *fiber.Ctx) error {
 	var r interface{}
 	var err error
 
-	r, err = ka.controller.Detail(c, 15)
+	var params, convert_err = strconv.Atoi(c.Params("id"))
+	if convert_err != nil {
+		return configs.NewHttpError(c, convert_err)
+	}
+
+	r, err = ka.controller.Detail(c, params)
 
 	if err != nil {
 		return configs.NewHttpError(c, err)
